# Funding-Rate-Arbitrage-Vault

./: Anchor.toml  Cargo.toml  keeper-bot.ts  package-lock.json  package.json  the.txt  tsconfig.json
programs/ranger-vault/: Cargo.toml
programs/ranger-vault/src/: lib.rs
tests/: ranger-vault.ts
