[package]
name = "ranger-vault"
version = "0.1.0"
description = "Funding Rate Arbitrage Vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ranger_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token"] }